2006-05-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-libs/hildon-widgets/hildon-time-editor.c
	* hildon-libs/hildon-widgets/hildon-time-picker.c
	* hildon-libs/hildon-widgets/hildon-wizard-dialog.h
	added comments to anonymous enums


2006-05-01  Luc Pionchon  <luc.pionchon@nokia.com>

	Hildon banner truncations,
	* hildon-widgets/hildon-banner.c
	(force_to_wrap_truncated): new function. Force to wrap truncated
	label by setting explicit size request. See N#27000 and G#329646
	(hildon_banner_check_position): call force_to_wrap_truncated()
	fixes N#27000, N#25305, N#26203

	* hildon-widgets/hildon-banner.c
	(HILDON_BANNER_LABEL_MAX_PROGRESS): increase value 265 -> 320 to
	satisfy N#26624, N#26161, N#27875

	* ut/tc_banner_truncate.c: new file. Test cases for banner truncations.


2006-05-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-banner.[ch]: code cleanup.


2006-04-29  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c:
	  - removed connection to self, replaced with overridding virtual
	    methods
	  - removed gtk_widget_set_event in init, legacy from HildonApp
	  - use gtk_widget_get_child_requisition() instead of
	    gtk_widget_size_request() in _allocation
	  - don't allocate space for the child if it is not visible

2006-04-28  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c:
	  - forgot to reinitialize convenience pointers to borders after they
	    are reinitialised
	  - replaced a g_return_if_fail with a g_return_val_if_fail now
	    that toggle_menu returns a g_boolean

2006-04-28  Johan Bilien  <johan.bilien@nokia.com>

	N#28176
	* hildon-widgets/hildon-window.c: Free the borders structure
	  when the window is destroyed.

2006-04-27 Tapani Palli <tapani.palli@nokia.com>

	* hildon-widgets/hildon-caption.c : check if ancestor
	(still) exists in set-focus handler, fixes N#25501

2006-04-27  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-time-editor.c